loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:4: error: '<-' expected but ')' found.
for(x->1 to 8)
             ^LoopStairs:13: error: illegal start of simple expression
	}
        ^